--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catch The Sweet</title>
-  <link rel="candypop/stylesheet" href="styles.css">
+  <link rel="stylesheet" href="candypop/styles.css">
 </head>
 <body>
   <div class="screen">
