--- a/index.html
+++ b/index.html
@@ -74,25 +74,25 @@
             <img src="Assets/cafehc1.png" alt="coffee cup">
             <h2>Candy POP</h2>
             <p>A rich and sweet experience.</p>
-            <a href="canpypop.html" target="_blank">View Project</a>
+            <a href="candypop/candypop.html" target="_blank">View Project</a>
         </div>
         <div class="project">
             <img src="Assets/cafehc1.png" alt="coffee cup">
             <h2>old school</h2>
             <p>Crafting beauty with 90's.</p>
-            <a href="90's.html" target="_blank">View Project</a>
+            <a href="90'sminimal/90's.html" target="_blank">View Project</a>
         </div>
         <div class="project">
             <img src="Assets/cafehc1.png" alt="coffee cup">
             <h2>take some rest</h2>
             <p>A perfect blend of sounds and images.</p>
-            <a href="relax.html" target="_blank">View Project</a>
+            <a href="realx/relax.html" target="_blank">View Project</a>
         </div>
         <div class="project">
             <img src="Assets/cafehc1.png" alt="coffee cup">
             <h2>Pixel art showcase</h2>
             <p>For those who love a colorful delight.</p>
-            <a href="pixo.html" target="_blank">View Project</a>
+            <a href="PixelArtpixo.html" target="_blank">View Project</a>
         </div>
     </div>
 </body>
