--- a/candypop/candypop.html
+++ b/candypop/candypop.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Candy POP</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Catch The Sweet</title>
+
+  <link rel="stylesheet" href="candypop/styles.css">
 </head>
 <body>
   <div class="screen">
@@ -19,25 +20,25 @@
       <li>
         <button class="choose-sweet-btn">
           <p>Chocolate</p>
-          <img src="chocolate.png" alt="chocolate"/>
+          <img src="candypop/img/chocolate.png" alt="chocolate"/>
         </button>
       </li>
       <li>
         <button class="choose-sweet-btn">
           <p>Toffee</p>
-          <img src="toffee.jpeg" alt="toffee"/>
+          <img src="candypop/img/toffee.jpeg" alt="toffee"/>
         </button>
       </li>
       <li>
         <button class="choose-sweet-btn">
           <p>Candy Cane</p>
-          <img src="cane.jpg" alt="candy cane"/>
+          <img src="candypop/img/cane.jpg" alt="candy cane"/>
         </button>
       </li>
       <li>
         <button class="choose-sweet-btn">
           <p>Donut</p>
-          <img src="dougnt.png" alt="donut"/>
+          <img src="candypop/img/dougnt.png" alt="donut"/>
         </button>
       </li>
     </ul>
@@ -49,6 +50,7 @@
     <h5 id="message" class="message">Are you craving more sweets? <br /> You are playing an irresistible game!!</h5>
     <button class="btn" id="back-btn">Back to Main Menu</button>
   </div>
-  <script src="candy.js"></script>
+
+  <script src="candypop/script.js"></script>
 </body>
 </html>
