--- a/candypop.html
+++ b/candypop.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Catch The Sweet</title>
   
-  <link rel="stylesheet" href="candypop/styles.css">
+  <link rel="stylesheet" href="candypop/candy.css">
 </head>
 <body>
   <div class="screen">
@@ -50,6 +50,6 @@
     <button class="btn" id="back-btn">Back to Main Menu</button>
   </div>
 
-  <script src="candypop/script.js"></script>
+  <script src="candypop/pop.js"></script>
 </body>
 </html>
